bindings/rgml.h

/**
 * [Matrix<T, 4, 4>] backed by [f32]
 */
typedef struct Matrix_f32__4__4 mat4_t;
/**
 * [Vector<T, 4>] backed by [f32]
 */
typedef struct Vector_f32__4 vec4_t;
/**
 * [Vector<T, 3>] backed by [f32]
 */
typedef struct Vector_f32__3 vec3_t;
/**
 *
 * A vector type. Commonly used for 2D and 3D math
 *
 * At an underlying level a [Vector] is an equivalent to using `[T; C]`
 *
 */
typedef struct Vector_f32__2 {
  /**
   * The underlying array of the vector, dereferencing [Vector] returns this
   */
  float backing[2];
} Vector_f32__2;
/**
 * [Vector<T, 2>] backed by [f32]
 */
typedef struct Vector_f32__2 Vector2F32;
Vector2F32 vec2_abs(Vector2F32 i);
Vector2F32 vec2_add(Vector2F32 lhs, Vector2F32 rhs);
Vector2F32 vec2_ceil(Vector2F32 i);
Vector2F32 vec2_cos(Vector2F32 i);
Vector2F32 vec2_default(void);
Vector2F32 vec2_div(Vector2F32 lhs, Vector2F32 rhs);
float vec2_dot(Vector2F32 lhs, Vector2F32 rhs);
Vector2F32 vec2_floor(Vector2F32 i);
Vector2F32 vec2_fract(Vector2F32 i);
Vector2F32 vec2_from_vec3(vec3_t i);
Vector2F32 vec2_from_vec4(vec4_t i);
Vector2F32 vec2_lerp(Vector2F32 from, Vector2F32 to, float alpha);
float vec2_magnitude(Vector2F32 i);
float vec2_magnitude_sqr(Vector2F32 i);
Vector2F32 vec2_max(Vector2F32 lhs, Vector2F32 rhs);
Vector2F32 vec2_min(Vector2F32 lhs, Vector2F32 rhs);
Vector2F32 vec2_mul(Vector2F32 lhs, Vector2F32 rhs);
Vector2F32 vec2_new(float x, float y);
Vector2F32 vec2_normalize(Vector2F32 i);
Vector2F32 vec2_pow(Vector2F32 lhs, Vector2F32 rhs);
Vector2F32 vec2_round(Vector2F32 i);
Vector2F32 vec2_saturate(Vector2F32 i);
Vector2F32 vec2_scalar(float x);
Vector2F32 vec2_sign(Vector2F32 i);
Vector2F32 vec2_sin(Vector2F32 i);
Vector2F32 vec2_sqrt(Vector2F32 i);
Vector2F32 vec2_sub(Vector2F32 lhs, Vector2F32 rhs);
float vec2_sum(Vector2F32 i);
Vector2F32 vec2_tan(Vector2F32 i);
vec3_t vec3_abs(vec3_t i);
vec3_t vec3_add(vec3_t lhs, vec3_t rhs);
vec3_t vec3_ceil(vec3_t i);
vec3_t vec3_cos(vec3_t i);
vec3_t vec3_cross(vec3_t lhs, vec3_t rhs);
vec3_t vec3_default(void);
vec3_t vec3_div(vec3_t lhs, vec3_t rhs);
float vec3_dot(vec3_t lhs, vec3_t rhs);
vec3_t vec3_floor(vec3_t i);
vec3_t vec3_fract(vec3_t i);
vec3_t vec3_from_vec2(Vector2F32 i);
vec3_t vec3_from_vec4(vec4_t i);
vec3_t vec3_lerp(vec3_t from, vec3_t to, float alpha);
float vec3_magnitude(vec3_t i);
float vec3_magnitude_sqr(vec3_t i);
vec3_t vec3_max(vec3_t lhs, vec3_t rhs);
vec3_t vec3_min(vec3_t lhs, vec3_t rhs);
vec3_t vec3_mul(vec3_t lhs, vec3_t rhs);
vec3_t vec3_new(float x, float y, float z);
vec3_t vec3_normalize(vec3_t i);
vec3_t vec3_pow(vec3_t lhs, vec3_t rhs);
vec3_t vec3_reflect(vec3_t lhs, vec3_t rhs);
vec3_t vec3_round(vec3_t i);
vec3_t vec3_saturate(vec3_t i);
vec3_t vec3_scalar(float x);
vec3_t vec3_sign(vec3_t i);
vec3_t vec3_sin(vec3_t i);
vec3_t vec3_sqrt(vec3_t i);
vec3_t vec3_sub(vec3_t lhs, vec3_t rhs);
float vec3_sum(vec3_t i);
vec3_t vec3_tan(vec3_t i);
vec4_t vec4_abs(vec4_t i);
vec4_t vec4_add(vec4_t lhs, vec4_t rhs);
vec4_t vec4_ceil(vec4_t i);
vec4_t vec4_cos(vec4_t i);
vec4_t vec4_div(vec4_t lhs, vec4_t rhs);
float vec4_dot(vec4_t lhs, vec4_t rhs);
vec4_t vec4_floor(vec4_t i);
vec4_t vec4_fract(vec4_t i);
vec4_t vec4_lerp(vec4_t from, vec4_t to, float alpha);
float vec4_magnitude(vec4_t i);
float vec4_magnitude_sqr(vec4_t i);
vec4_t vec4_max(vec4_t lhs, vec4_t rhs);
vec4_t vec4_min(vec4_t lhs, vec4_t rhs);
vec4_t vec4_mul(vec4_t lhs, vec4_t rhs);
vec4_t vec4_mul_mat4(vec4_t lhs, mat4_t rhs);
vec4_t vec4_normalize(vec4_t i);
vec4_t vec4_pow(vec4_t lhs, vec4_t rhs);
vec4_t vec4_round(vec4_t i);
vec4_t vec4_saturate(vec4_t i);
vec4_t vec4_sign(vec4_t i);
vec4_t vec4_sin(vec4_t i);
vec4_t vec4_sqrt(vec4_t i);
vec4_t vec4_sub(vec4_t lhs, vec4_t rhs);
float vec4_sum(vec4_t i);
vec4_t vec4_tan(vec4_t i);