bindings/dotnet/Internal.cs

//
// Generated at 2022-11-10 06:21:17.985565 by generate_ffi.py
//

using System.Runtime.InteropServices;

namespace PrismMath.Internal {
	internal class Vector2F32 {
		[DllImport("prism_math")]
		internal static extern Vector2 vec2_add(Vector2 lhs, Vector2 rhs);

		[DllImport("prism_math")]
		internal static extern Vector2 vec2_sub(Vector2 lhs, Vector2 rhs);

		[DllImport("prism_math")]
		internal static extern Vector2 vec2_mul(Vector2 lhs, Vector2 rhs);

		[DllImport("prism_math")]
		internal static extern Vector2 vec2_div(Vector2 lhs, Vector2 rhs);

		[DllImport("prism_math")]
		internal static extern Vector2 vec2_normalize(Vector2 i);

		[DllImport("prism_math")]
		internal static extern Vector2 vec2_abs(Vector2 i);

		[DllImport("prism_math")]
		internal static extern Vector2 vec2_floor(Vector2 i);

		[DllImport("prism_math")]
		internal static extern Vector2 vec2_ceil(Vector2 i);

		[DllImport("prism_math")]
		internal static extern Vector2 vec2_round(Vector2 i);

		[DllImport("prism_math")]
		internal static extern Vector2 vec2_saturate(Vector2 i);

		[DllImport("prism_math")]
		internal static extern Vector2 vec2_sqrt(Vector2 i);

		[DllImport("prism_math")]
		internal static extern Vector2 vec2_sin(Vector2 i);

		[DllImport("prism_math")]
		internal static extern Vector2 vec2_cos(Vector2 i);

		[DllImport("prism_math")]
		internal static extern Vector2 vec2_tan(Vector2 i);

		[DllImport("prism_math")]
		internal static extern Vector2 vec2_sign(Vector2 i);

		[DllImport("prism_math")]
		internal static extern Vector2 vec2_fract(Vector2 i);

		[DllImport("prism_math")]
		internal static extern float vec2_sum(Vector2 i);

		[DllImport("prism_math")]
		internal static extern float vec2_magnitude(Vector2 i);

		[DllImport("prism_math")]
		internal static extern float vec2_magnitude_sqr(Vector2 i);

		[DllImport("prism_math")]
		internal static extern Vector2 vec2_min(Vector2 lhs, Vector2 rhs);

		[DllImport("prism_math")]
		internal static extern Vector2 vec2_max(Vector2 lhs, Vector2 rhs);

		[DllImport("prism_math")]
		internal static extern Vector2 vec2_pow(Vector2 lhs, Vector2 rhs);

		[DllImport("prism_math")]
		internal static extern float vec2_dot(Vector2 lhs, Vector2 rhs);

		[DllImport("prism_math")]
		internal static extern Vector2 vec2_lerp(Vector2 from, Vector2 to, float alpha);

		[DllImport("prism_math")]
		internal static extern Vector2 vec2_new(float x, float y);

		[DllImport("prism_math")]
		internal static extern Vector2 vec2_scalar(float x);

		[DllImport("prism_math")]
		internal static extern Vector2 vec2_default();

		[DllImport("prism_math")]
		internal static extern Vector2 vec2_from_vec3(Vector3 i);

		[DllImport("prism_math")]
		internal static extern Vector2 vec2_from_vec4(Vector4 i);

		// Skeleton Bindings (these are placeholders, they may need to be manually fixed)
		/*
		public Vector2 Add(Vector2 rhs) => Vector2F32.vec2_add(this, rhs);
		public Vector2 Sub(Vector2 rhs) => Vector2F32.vec2_sub(this, rhs);
		public Vector2 Mul(Vector2 rhs) => Vector2F32.vec2_mul(this, rhs);
		public Vector2 Div(Vector2 rhs) => Vector2F32.vec2_div(this, rhs);
		public Vector2 Normalize() => Vector2F32.vec2_normalize(this);
		public Vector2 Abs() => Vector2F32.vec2_abs(this);
		public Vector2 Floor() => Vector2F32.vec2_floor(this);
		public Vector2 Ceil() => Vector2F32.vec2_ceil(this);
		public Vector2 Round() => Vector2F32.vec2_round(this);
		public Vector2 Saturate() => Vector2F32.vec2_saturate(this);
		public Vector2 Sqrt() => Vector2F32.vec2_sqrt(this);
		public Vector2 Sin() => Vector2F32.vec2_sin(this);
		public Vector2 Cos() => Vector2F32.vec2_cos(this);
		public Vector2 Tan() => Vector2F32.vec2_tan(this);
		public Vector2 Sign() => Vector2F32.vec2_sign(this);
		public Vector2 Fract() => Vector2F32.vec2_fract(this);
		public float Sum() => Vector2F32.vec2_sum(this);
		public float Magnitude() => Vector2F32.vec2_magnitude(this);
		public float Magnitude_sqr() => Vector2F32.vec2_magnitude_sqr(this);
		public Vector2 Min(Vector2 rhs) => Vector2F32.vec2_min(this, rhs);
		public Vector2 Max(Vector2 rhs) => Vector2F32.vec2_max(this, rhs);
		public Vector2 Pow(Vector2 rhs) => Vector2F32.vec2_pow(this, rhs);
		public float Dot(Vector2 rhs) => Vector2F32.vec2_dot(this, rhs);
		public Vector2 Lerp(Vector2 to, float alpha) => Vector2F32.vec2_lerp(this, to, alpha);
		public Vector2 New(float x, float y) => Vector2F32.vec2_new(x, y);
		public Vector2 Scalar(float x) => Vector2F32.vec2_scalar(x);
		public Vector2 Default() => Vector2F32.vec2_default();
		public Vector2 From_vec3(Vector3 i) => Vector2F32.vec2_from_vec3(i);
		public Vector2 From_vec4(Vector4 i) => Vector2F32.vec2_from_vec4(i);
		*/
	}
	internal class Vector3F32 {
		[DllImport("prism_math")]
		internal static extern Vector3 vec3_add(Vector3 lhs, Vector3 rhs);

		[DllImport("prism_math")]
		internal static extern Vector3 vec3_sub(Vector3 lhs, Vector3 rhs);

		[DllImport("prism_math")]
		internal static extern Vector3 vec3_mul(Vector3 lhs, Vector3 rhs);

		[DllImport("prism_math")]
		internal static extern Vector3 vec3_div(Vector3 lhs, Vector3 rhs);

		[DllImport("prism_math")]
		internal static extern Vector3 vec3_normalize(Vector3 i);

		[DllImport("prism_math")]
		internal static extern Vector3 vec3_abs(Vector3 i);

		[DllImport("prism_math")]
		internal static extern Vector3 vec3_floor(Vector3 i);

		[DllImport("prism_math")]
		internal static extern Vector3 vec3_ceil(Vector3 i);

		[DllImport("prism_math")]
		internal static extern Vector3 vec3_round(Vector3 i);

		[DllImport("prism_math")]
		internal static extern Vector3 vec3_saturate(Vector3 i);

		[DllImport("prism_math")]
		internal static extern Vector3 vec3_sqrt(Vector3 i);

		[DllImport("prism_math")]
		internal static extern Vector3 vec3_sin(Vector3 i);

		[DllImport("prism_math")]
		internal static extern Vector3 vec3_cos(Vector3 i);

		[DllImport("prism_math")]
		internal static extern Vector3 vec3_tan(Vector3 i);

		[DllImport("prism_math")]
		internal static extern Vector3 vec3_sign(Vector3 i);

		[DllImport("prism_math")]
		internal static extern Vector3 vec3_fract(Vector3 i);

		[DllImport("prism_math")]
		internal static extern float vec3_sum(Vector3 i);

		[DllImport("prism_math")]
		internal static extern float vec3_magnitude(Vector3 i);

		[DllImport("prism_math")]
		internal static extern float vec3_magnitude_sqr(Vector3 i);

		[DllImport("prism_math")]
		internal static extern Vector3 vec3_min(Vector3 lhs, Vector3 rhs);

		[DllImport("prism_math")]
		internal static extern Vector3 vec3_max(Vector3 lhs, Vector3 rhs);

		[DllImport("prism_math")]
		internal static extern Vector3 vec3_pow(Vector3 lhs, Vector3 rhs);

		[DllImport("prism_math")]
		internal static extern Vector3 vec3_cross(Vector3 lhs, Vector3 rhs);

		[DllImport("prism_math")]
		internal static extern Vector3 vec3_reflect(Vector3 lhs, Vector3 rhs);

		[DllImport("prism_math")]
		internal static extern float vec3_dot(Vector3 lhs, Vector3 rhs);

		[DllImport("prism_math")]
		internal static extern Vector3 vec3_lerp(Vector3 from, Vector3 to, float alpha);

		[DllImport("prism_math")]
		internal static extern Vector3 vec3_new(float x, float y, float z);

		[DllImport("prism_math")]
		internal static extern Vector3 vec3_scalar(float x);

		[DllImport("prism_math")]
		internal static extern Vector3 vec3_default();

		[DllImport("prism_math")]
		internal static extern Vector3 vec3_from_vec2(Vector2 i);

		[DllImport("prism_math")]
		internal static extern Vector3 vec3_from_vec4(Vector4 i);

		// Skeleton Bindings (these are placeholders, they may need to be manually fixed)
		/*
		public Vector3 Add(Vector3 rhs) => Vector3F32.vec3_add(this, rhs);
		public Vector3 Sub(Vector3 rhs) => Vector3F32.vec3_sub(this, rhs);
		public Vector3 Mul(Vector3 rhs) => Vector3F32.vec3_mul(this, rhs);
		public Vector3 Div(Vector3 rhs) => Vector3F32.vec3_div(this, rhs);
		public Vector3 Normalize() => Vector3F32.vec3_normalize(this);
		public Vector3 Abs() => Vector3F32.vec3_abs(this);
		public Vector3 Floor() => Vector3F32.vec3_floor(this);
		public Vector3 Ceil() => Vector3F32.vec3_ceil(this);
		public Vector3 Round() => Vector3F32.vec3_round(this);
		public Vector3 Saturate() => Vector3F32.vec3_saturate(this);
		public Vector3 Sqrt() => Vector3F32.vec3_sqrt(this);
		public Vector3 Sin() => Vector3F32.vec3_sin(this);
		public Vector3 Cos() => Vector3F32.vec3_cos(this);
		public Vector3 Tan() => Vector3F32.vec3_tan(this);
		public Vector3 Sign() => Vector3F32.vec3_sign(this);
		public Vector3 Fract() => Vector3F32.vec3_fract(this);
		public float Sum() => Vector3F32.vec3_sum(this);
		public float Magnitude() => Vector3F32.vec3_magnitude(this);
		public float Magnitude_sqr() => Vector3F32.vec3_magnitude_sqr(this);
		public Vector3 Min(Vector3 rhs) => Vector3F32.vec3_min(this, rhs);
		public Vector3 Max(Vector3 rhs) => Vector3F32.vec3_max(this, rhs);
		public Vector3 Pow(Vector3 rhs) => Vector3F32.vec3_pow(this, rhs);
		public Vector3 Cross(Vector3 rhs) => Vector3F32.vec3_cross(this, rhs);
		public Vector3 Reflect(Vector3 rhs) => Vector3F32.vec3_reflect(this, rhs);
		public float Dot(Vector3 rhs) => Vector3F32.vec3_dot(this, rhs);
		public Vector3 Lerp(Vector3 to, float alpha) => Vector3F32.vec3_lerp(this, to, alpha);
		public Vector3 New(float x, float y, float z) => Vector3F32.vec3_new(x, y, z);
		public Vector3 Scalar(float x) => Vector3F32.vec3_scalar(x);
		public Vector3 Default() => Vector3F32.vec3_default();
		public Vector3 From_vec2(Vector2 i) => Vector3F32.vec3_from_vec2(i);
		public Vector3 From_vec4(Vector4 i) => Vector3F32.vec3_from_vec4(i);
		*/
	}
	internal class Vector4F32 {
		[DllImport("prism_math")]
		internal static extern Vector4 vec4_add(Vector4 lhs, Vector4 rhs);

		[DllImport("prism_math")]
		internal static extern Vector4 vec4_sub(Vector4 lhs, Vector4 rhs);

		[DllImport("prism_math")]
		internal static extern Vector4 vec4_mul(Vector4 lhs, Vector4 rhs);

		[DllImport("prism_math")]
		internal static extern Vector4 vec4_div(Vector4 lhs, Vector4 rhs);

		[DllImport("prism_math")]
		internal static extern Vector4 vec4_mul_mat4(Vector4 lhs, Matrix4x4 rhs);

		[DllImport("prism_math")]
		internal static extern Vector4 vec4_normalize(Vector4 i);

		[DllImport("prism_math")]
		internal static extern Vector4 vec4_abs(Vector4 i);

		[DllImport("prism_math")]
		internal static extern Vector4 vec4_floor(Vector4 i);

		[DllImport("prism_math")]
		internal static extern Vector4 vec4_ceil(Vector4 i);

		[DllImport("prism_math")]
		internal static extern Vector4 vec4_round(Vector4 i);

		[DllImport("prism_math")]
		internal static extern Vector4 vec4_saturate(Vector4 i);

		[DllImport("prism_math")]
		internal static extern Vector4 vec4_sqrt(Vector4 i);

		[DllImport("prism_math")]
		internal static extern Vector4 vec4_sin(Vector4 i);

		[DllImport("prism_math")]
		internal static extern Vector4 vec4_cos(Vector4 i);

		[DllImport("prism_math")]
		internal static extern Vector4 vec4_tan(Vector4 i);

		[DllImport("prism_math")]
		internal static extern Vector4 vec4_sign(Vector4 i);

		[DllImport("prism_math")]
		internal static extern Vector4 vec4_fract(Vector4 i);

		[DllImport("prism_math")]
		internal static extern float vec4_sum(Vector4 i);

		[DllImport("prism_math")]
		internal static extern float vec4_magnitude(Vector4 i);

		[DllImport("prism_math")]
		internal static extern float vec4_magnitude_sqr(Vector4 i);

		[DllImport("prism_math")]
		internal static extern Vector4 vec4_min(Vector4 lhs, Vector4 rhs);

		[DllImport("prism_math")]
		internal static extern Vector4 vec4_max(Vector4 lhs, Vector4 rhs);

		[DllImport("prism_math")]
		internal static extern Vector4 vec4_pow(Vector4 lhs, Vector4 rhs);

		[DllImport("prism_math")]
		internal static extern float vec4_dot(Vector4 lhs, Vector4 rhs);

		[DllImport("prism_math")]
		internal static extern Vector4 vec4_lerp(Vector4 from, Vector4 to, float alpha);
